--- a/public/en-savoir-plus/index.html
+++ b/public/en-savoir-plus/index.html
@@ -61,6 +61,8 @@
 
   <nav class="hx:mx-auto hx:flex hx:items-center hx:justify-end hx:gap-2 hx:h-16 hx:px-6 hx:max-w-[90rem]">
     <a class="hx:flex hx:items-center hx:hover:opacity-75 hx:ltr:mr-auto hx:rtl:ml-auto" href="/">
+        <img class="hx:mr-2 hx:block hx:dark:hidden" src="/img/logo.png" alt="Cloud du Coeur" height="20" width="175" />
+        <img class="hx:mr-2 hx:hidden hx:dark:block" src="/img/logo.png" alt="Cloud du Coeur" height="20" width="175" />
     </a><a
             title="Documentation"
             href="/doc"
