--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,8 @@ des guides de bonnes pratiques mais également comment contribuer au projet.">
 
   <nav class="hx:mx-auto hx:flex hx:items-center hx:justify-end hx:gap-2 hx:h-16 hx:px-6 hx:max-w-[90rem]">
     <a class="hx:flex hx:items-center hx:hover:opacity-75 hx:ltr:mr-auto hx:rtl:ml-auto" href="/">
+        <img class="hx:mr-2 hx:block hx:dark:hidden" src="/img/logo.png" alt="Cloud du Coeur" height="20" width="175" />
+        <img class="hx:mr-2 hx:hidden hx:dark:block" src="/img/logo.png" alt="Cloud du Coeur" height="20" width="175" />
     </a><a
             title="Documentation"
             href="/doc"
@@ -178,10 +180,7 @@ des guides de bonnes pratiques mais également comment contribuer au projet.">
 </div></div></aside>
     <div class="hx:w-full hx:break-words hx:min-h-[calc(100vh-var(--navbar-height))] hx:min-w-0 hx:pb-8 hx:pt-8 hx:md:pt-12 hx:pl-[max(env(safe-area-inset-left),1.5rem)] hx:pr-[max(env(safe-area-inset-left),1.5rem)]">
       <div class="hx:flex hx:flex-col hx:items-start">
-        <div style="display: flex; justify-content: center; align-items: center; margin-top: 2rem; margin-bottom: 2rem;">
-  <img src="img/logo.png" alt="Cloud du Coeur" style="max-width: 400px; height: auto;">
-</div>
-<a
+        <a
   href="https://github.com/cloudducoeur/documentation"
   class=" not-prose hx:inline-flex hx:items-center hx:rounded-full hx:gap-2 hx:px-3 hx:py-1 hx:text-xs hx:text-gray-600 hx:dark:text-gray-400 hx:bg-gray-100 hx:dark:bg-neutral-800 hx:border-gray-200 hx:dark:border-neutral-800 hx:border hx:hover:border-gray-400 hx:dark:hover:text-gray-50 hx:dark:hover:border-gray-600 hx:transition-all hx:ease-in hx:duration-200"
   
