add: c'est quoi ?

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@ des guides de bonnes pratiques mais également comment contribuer au projet.">
   </nav>
 </div>
 
-  <div class='hx:mx-auto hx:flex hx:max-w-screen-xl'>
+  <div class='hx:mx-auto hx:flex hx:max-w-[90rem]'>
     <aside class="sidebar-container hx:flex hx:flex-col hx:print:hidden hx:md:top-16 hx:md:shrink-0 hx:md:w-64 hx:md:self-start hx:max-md:[transform:translate3d(0,-100%,0)] hx:md:hidden">
   
   <div class="hx:px-4 hx:pt-4 hx:md:hidden">
